attempt to fix mobile overflow
trying to fix overflow on mobile, also added lang attribute for html

--- a/default.css
+++ b/default.css
@@ -11,6 +11,9 @@ body {
 	overflow: hidden;
 }
 
+html {
+	overflow: hidden;
+}
 #background {
 	overflow: hidden;
 	position: absolute;
@@ -45,6 +48,7 @@ a {
 	background-image: radial-gradient(#C4C7C0, rgba(196,199,192,0.4));
 	padding: 20px;
 	text-align: center;
+	overflow: hidden;
 }
 
 .projectlist {
